--- a/ymir/blog.cfg
+++ b/ymir/blog.cfg
@@ -13,7 +13,11 @@ domain = u"la-grange.net"
 # FAVICON = SITE + "favicon"
 # TEMPLATEDIR = os.path.dirname(sys.argv[0]) + "/templates/"
 # FEEDLANG = u"fr"
+feedatomname = 'feed.atom'
 # FEEDATOMURL = u"%s%s" % (SITE, FEEDATOMNOM)
 
 [feed]
 feedtagid = u"tag:la-grange.net,2000-04-12:karl"
+
+[local]
+sitelocalpath = "/Users/karl/Sites/la-grange.net"
