--- a/ymir/blog.cfg
+++ b/ymir/blog.cfg
@@ -1,23 +1,3 @@
-[blog]
-sitename = u"Les carnets Web de La Grange"
-tagline = u"Rêveries le long d'un brin de chèvrefeuille"
-author = u"Karl Dubost"
-authoruri = u"http://www.la-grange.net/karl/"
-lang = u"fr"
-licencelist = {u'ccby': u'http://creativecommons.org/licenses/by/2.0/fr/', u'copy': u'©'}
-
-
-[site]
-domain = u"la-grange.net"
-# SITE = u"http://www.%s/" % (DOMAIN)
-# FAVICON = SITE + "favicon"
-# TEMPLATEDIR = os.path.dirname(sys.argv[0]) + "/templates/"
-# FEEDLANG = u"fr"
-feedatomname = 'feed.atom'
-# FEEDATOMURL = u"%s%s" % (SITE, FEEDATOMNOM)
-
-[feed]
-feedtagid = u"tag:la-grange.net,2000-04-12:karl"
-
-[local]
-sitelocalpath = "/Users/karl/Sites/la-grange.net"
+# Global Constants
+[constants]
+htmlns = http://www.w3.org/1999/xhtml
